syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.stockManager";
option java_outer_classname = "StockManagerImpl";

package stockmanager;

service  stockManager{
  //Stream of stock to be added each call returns the current levels of that paticular stock
  rpc AddStock(stream StockMessage) returns (stream StockMessage){}

  //Remove stock, retunr message is current level of that stock
  rpc RemoveStock(StockMessage) returns(RemoveStockMessage){}

  rpc StockSummary(EmptyStockMessage) returns (stream StockMessage){}
}

message StockMessage{
  string stockType = 1;
  double stockVolume =2;
}

message RemoveStockMessage{
  bool isSuccess =1; //true if there was enough stock to remove and was removed.
  StockMessage stockMessage =2;
}

message EmptyStockMessage{}


//database of stock, not used as message
message StockDatabase{
  repeated StockMessage StockMessage = 1;
}


